# aion-context-studio

./: .gitignore  .impeccable.md  Cargo.toml  README.md  ROADMAP.md  deny.toml
.cargo/: mutants.toml
crates/aion-studio-api/: Cargo.toml
crates/aion-studio-api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
crates/aion-studio-api/src/routes/: copilot.rs  mod.rs  policies.rs  registry.rs
crates/studio-core/: Cargo.toml
crates/studio-core/src/: audit.rs  author_index.rs  authoring.rs  copilot.rs  custody.rs  diff.rs  error.rs  evaluate.rs  keystore.rs  lib.rs  multisig_store.rs  policies.rs  registry_admin.rs  registry_store.rs  seed.rs  workspace.rs
demo/: DEMO-MANIFEST.md  concat.txt  custody.html  durations.json  generate-narration.sh  record-demo.js  script.md
demo/narration/: scene-1.txt  scene-2.txt  scene-3.txt  scene-4.txt  scene-5.txt  scene-6.txt  scene-7.txt  scene-8.txt
docs/: CUSTODY.md
scripts/: gate.sh
tauri/: README.md
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  types.ts
web/src/lib/components/: Audit.svelte  Copilot.svelte  DiffView.svelte  Governance.svelte  PolicyEditor.svelte  PolicyList.svelte  RuleBuilder.svelte  Simulate.svelte  VerifyReport.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/new/: +page.svelte
web/src/routes/policy/[id]/: +page.svelte
web/src/routes/registry/: +page.svelte
