[workspace]
resolver = "2"
members = ["crates/studio-core", "crates/aion-studio-api"]

[workspace.package]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aion-context/aion-context-studio"

[workspace.dependencies]
aion-context = { path = "../aion-context" }
studio-core = { path = "crates/studio-core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio-stream = "0.1"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
too_many_lines = "warn"
