[package]
name = "aion-studio-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "axum API for aion-context-studio: thin wiring over studio-core; serves the SPA."

[features]
# Build the desktop/keyring variant: enables OS-keyring custody in studio-core and the keyring branch
# of the `import-keys` command. Off by default — the demo uses file custody.
keyring = ["studio-core/keyring"]

[dependencies]
studio-core.workspace = true
aion-context.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
