[package]
name = "studio-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Glue between aion-context and the aion-context-studio API: workspace, policies, registry, seed."

[dependencies]
aion-context.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
