[package]
name = "studio-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Glue between aion-context and the aion-context-studio API: workspace, policies, registry, seed."

[dependencies]
aion-context.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# OS-keyring custody (Phase 7). Off by default — the local demo uses the file vault. A desktop/Tauri
# build enables this feature plus a platform store feature (e.g. apple-native / windows-native /
# sync-secret-service). With no platform feature, only the in-memory mock store is available (tests).
keyring = { version = "3", default-features = false, optional = true }

[features]
keyring = ["dep:keyring"]

[lints]
workspace = true
